// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processor components Editor renders with props 1`] = `
<div
  className={undefined}
>
  <div />
  <div>
    Type: 
    <span
      className="processor-type"
    >
      email
    </span>
  </div>
  <select
    className="processor-type-chooser"
    onChange={[Function]}
    value={undefined}
  >
    <option />
    <option
      value="email"
    >
      Email
    </option>
    <option
      value="redirect"
    >
      Redirect
    </option>
  </select>
  <div
    className="processor-editor"
  >
    <div
      className="caldera-forms-processor-config"
    >
      <div
        className="caldera-config-group"
      >
        <label
          htmlFor="fromName"
        >
          From Name
        </label>
        <input
          aria-describedby="fromName-description"
          className="field-config"
          id="fromName"
          onChange={[Function]}
          required={false}
          type="text"
          value={undefined}
        />
        <p
          className="description"
          id="fromName-description"
        >
          Who the email is from
        </p>
      </div>
      <div
        className="caldera-config-group"
      >
        <label
          htmlFor="fromEmail"
        >
          From Email
        </label>
        <input
          aria-describedby="fromEmail-description"
          className="field-config"
          id="fromEmail"
          onChange={[Function]}
          required={false}
          type="email"
          value={undefined}
        />
        <p
          className="description"
          id="fromEmail-description"
        >
          Who the email is from
        </p>
      </div>
      <div
        className="caldera-config-group"
      >
        <label
          htmlFor="contentType"
        >
          Content type
        </label>
        <input
          aria-describedby="contentType-description"
          className="field-config"
          id="contentType"
          onChange={[Function]}
          required={false}
          type="text"
          value={undefined}
        />
        <p
          className="description"
          id="contentType-description"
        >
          HTML or plain text?
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Processor components OpenEditorButton renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Open!
  </span>
</button>
`;

exports[`Processor components OpenEditorButton renders with out the non-required props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Edit Settings
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    R2
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders without label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Remove Processor
  </span>
</button>
`;

exports[`Using RenderGroup RenderGroup snapshot 1`] = `
<div
  className=""
>
  <div
    className="caldera-config-group"
  >
    <label
      htmlFor="cf-something-select-id"
    >
      Content type
    </label>
    <input
      aria-describedby="cf-something-select-id-description"
      className="field-config"
      id="cf-something-select-id"
      onChange={[Function]}
      required={false}
      type="text"
      value="html"
    />
    <p
      className="description"
      id="cf-something-select-id-description"
    >
      Choose content type, default is HTML
    </p>
  </div>
</div>
`;
